package fm;

public class NVSlotBonus extends Slot {

    public NVSlotBonus(){
        name = "Nevada Bonus";
        cost = 350;
        software = "Linux";
        components.add("Small");
        components.add("Ticketinticketout");
        components.add("CRT");
        components.add("X86");
    }
}
