package fm;
public class NVSlotProgressive extends Slot {
	
	public NVSlotProgressive() {
		cost=300;
		name="Nevada Progressive";
		software = "Android";
		components.add("Medium");
		components.add("Ticketinticketout");
		components.add("LCD");
		components.add("X77");
	}
}
