@startuml

title __FM's Class Diagram__\n

  namespace fm {
    class fm.NJSlotBonus {
        + NJSlotBonus()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.NJSlotProgressive {
        + NJSlotProgressive()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.NJSlotStore {
        # makeSlot()
    }
  }
  

  namespace fm {
    class fm.NJSlotStraight {
        + NJSlotStraight()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.NVSlotBonus {
        + NVSlotBonus()
    }
  }
  

  namespace fm {
    class fm.NVSlotProgressive {
        + NVSlotProgressive()
    }
  }
  

  namespace fm {
    class fm.NVSlotStore {
        # makeSlot()
    }
  }
  

  namespace fm {
    class fm.NVSlotStraight {
        + NVSlotStraight()
    }
  }
  

  namespace fm {
    abstract class fm.Slot {
        ~ components : ArrayList
        ~ cost : float
        ~ name : String
        ~ software : String
        + cost()
        + getName()
        ~ assembleParts()
        ~ collectParts()
        ~ ship()
        ~ test()
        ~ uploadSoftware()
    }
  }
  

  namespace fm {
    abstract class fm.SlotStore {
        + orderSlot()
        {abstract} # makeSlot()
    }
  }
  

  namespace fm {
    class fm.TestSlots {
        {static} + main()
    }
  }
  

  namespace fm {
    class fm.WSSlotBonus {
        + WSSlotBonus()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.WSSlotProgressive {
        + WSSlotProgressive()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.WSSlotStore {
        # makeSlot()
    }
  }
  

  namespace fm {
    class fm.WSSlotStraight {
        + WSSlotStraight()
        ~ ship()
    }
  }
  

  namespace fm {
    enum slottype {
      bonus
      progressive
      straight
    }
  }
  

  fm.NJSlotBonus -up-|> fm.Slot
  fm.NJSlotProgressive -up-|> fm.Slot
  fm.NJSlotStore -up-|> fm.SlotStore
  fm.NJSlotStraight -up-|> fm.Slot
  fm.NVSlotBonus -up-|> fm.Slot
  fm.NVSlotProgressive -up-|> fm.Slot
  fm.NVSlotStore -up-|> fm.SlotStore
  fm.NVSlotStraight -up-|> fm.Slot
  fm.WSSlotBonus -up-|> fm.Slot
  fm.WSSlotProgressive -up-|> fm.Slot
  fm.WSSlotStore -up-|> fm.SlotStore
  fm.WSSlotStraight -up-|> fm.Slot


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
